--- a/UI/skd-ref-site/src/assets/i18n/nl.json
+++ b/UI/skd-ref-site/src/assets/i18n/nl.json
@@ -36,7 +36,24 @@
 		"Mammal": "Mammal",
     "All": "Alles"
   },
+  "Structure": {
+		"Structure": "Structure",
+		"House": "House",
+		"Building": "Building",
+		"Other": "Other",
+		"All": "All"
+	},
+	"Vegetation": {
+		"Vegetation": "Vegetation",
+		"Flowers": "Flowers",
+		"Plants": "Plants",
+		"PhotoType": "Photo Type",
+		"Closeup": "Closeup",
+		"Full": "Full",
+		"All": "All"
+	},
   "Filters": {
+    "Type": "Type",
     "All": "Alles",	
     "Gender": "Geslacht",
     "Male": "Man",
