more work on user uploads

--- a/UI/skd-ref-site/src/assets/i18n/de.json
+++ b/UI/skd-ref-site/src/assets/i18n/de.json
@@ -86,7 +86,8 @@
     "Logs": "Protokolle",
     "LogIn": "Einloggen",
     "LogOut": "Ausloggen",
-    "ManageImages": "Manage images"
+    "ManageImages": "Manage images",
+    "YourImages": "Your images"
   },
   "News": {
     "WhatsNew": "Was gibt's Neues",
