--- a/UI/skd-ref-site/src/assets/i18n/en.json
+++ b/UI/skd-ref-site/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
 		"Title": "r/SketchDaily References",
 		"AddImages": "Add images",
 		"ManageImages": "Manage images",
+		"YourImages": "Your images",
 		"News": "News",
 		"Logs": "Logs",
 		"LogIn": "Log in",
