--- a/UI/skd-ref-site/src/assets/i18n/pt.json
+++ b/UI/skd-ref-site/src/assets/i18n/pt.json
@@ -86,6 +86,7 @@
     "Logs": "Logs",
     "LogIn": "Entrar",
     "LogOut": "Sair",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
