--- a/UI/skd-ref-site/src/assets/i18n/es.json
+++ b/UI/skd-ref-site/src/assets/i18n/es.json
@@ -86,6 +86,7 @@
     "Logs": "Registros",
     "LogIn": "Iniciar sesión",
     "LogOut": "Cerrar sesión",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
