--- a/UI/skd-ref-site/src/assets/i18n/fr.json
+++ b/UI/skd-ref-site/src/assets/i18n/fr.json
@@ -86,6 +86,7 @@
     "Logs": "Journaux",
     "LogIn": "S'identifier",
     "LogOut": "Connectez - Out",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
