--- a/UI/skd-ref-site/src/assets/i18n/nl.json
+++ b/UI/skd-ref-site/src/assets/i18n/nl.json
@@ -86,6 +86,7 @@
     "Logs": "Logs",
     "LogIn": "Log in",
     "LogOut": "Log out",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
