--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -86,6 +86,7 @@
     "Logs": "бревна",
     "LogIn": "Авторизоваться",
     "LogOut": "Выйти",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
