--- a/UI/skd-ref-site/src/assets/i18n/sv.json
+++ b/UI/skd-ref-site/src/assets/i18n/sv.json
@@ -86,6 +86,7 @@
     "Logs": "Loggar",
     "LogIn": "Logga in",
     "LogOut": "Logga ut",
+    "YourImages": "Your images",
     "ManageImages": "Manage images"
   },
   "News": {
