--- a/UI/skd-ref-site/src/assets/i18n/de.json
+++ b/UI/skd-ref-site/src/assets/i18n/de.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Hallo!",
-    "Welcome": "Willkommen beim SketchDaily Vorlagen-Dingsbums.",
-    "LookingForSomethingElseToDraw": "Möchtest du etwas anderes zeichnen?",
-    "JoinTheFun": "Mach mit!"
-  },
-  "FullBody": {
-    "FullBody": "Ganzkörper",
-    "All": "Alle",
-    "Clothing": "Kleidung",
-    "Clothed": "Bekleidet",
-    "Nude": "Nackt",
-    "IncludeNSFWImages": "NSFW-Bilder einschließen",
-    "Pose": "Pose",
-    "Action": "In Aktion",
-    "Stationary": "Statisch"
-  },
-  "BodyPart": {
-    "BodyPart": "Körperteil",
-    "Hand": "Hände",
-    "Foot": "Feet",
-    "Head": "Köpfe",
+	"Welcome": {
+		"Hello": "Hallo!",
+		"Welcome": "Willkommen beim SketchDaily Vorlagen-Dingsbums.",
+		"LookingForSomethingElseToDraw": "Möchtest du etwas anderes zeichnen?",
+		"JoinTheFun": "Mach mit!"
+	},
+	"FullBody": {
+		"FullBody": "Ganzkörper",
+		"All": "Alle",
+		"Clothing": "Kleidung",
+		"Clothed": "Bekleidet",
+		"Nude": "Nackt",
+		"IncludeNSFWImages": "NSFW-Bilder einschließen",
+		"Pose": "Pose",
+		"Action": "In Aktion",
+		"Stationary": "Statisch"
+	},
+	"BodyPart": {
+		"BodyPart": "Körperteil",
+		"Hand": "Hände",
+		"Foot": "Füße",
+		"Head": "Köpfe",
 		"All": "Alle"
-  },
-  "Animal": {
-    "Animal": "Tier",
-    "Species": "Spezies",
-    "Bird": "Vogel",
-    "Fish": "Fisch",
-    "ReptileOrAmphibian": "Reptil oder Amphibien",
-    "Category": "Kategorie",
-    "Living": "Leben",
-    "SkeletonOrBones": "Skelett oder Knochen",
-		"Bug": "Bug",
-		"Mammal": "Mammal",
+	},
+	"Animal": {
+		"Animal": "Tier",
+		"Species": "Spezies",
+		"Bird": "Vogel",
+		"Fish": "Fisch",
+		"ReptileOrAmphibian": "Reptil oder Amphibien",
+		"Category": "Kategorie",
+		"Living": "Leben",
+		"SkeletonOrBones": "Skelett oder Knochen",
+		"Bug": "Käfer/Insekten",
+		"Mammal": "Säugetiere",
 		"All": "Alle"
-  },
-  "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+	},
+	"Structure": {
+		"Structure": "Strukturen",
+		"House": "Häuser",
+		"Building": "Gebäude",
+		"Other": "andere",
+		"All": "Alle"
 	},
 	"Vegetation": {
 		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
+		"Flowers": "Blumen",
+		"Plants": "Pflanze",
+		"PhotoType": "Photo Typ",
 		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
+		"Full": "Vollständig",
+		"All": "Alle"
 	},
-  "Filters": {
-    "All": "All",	
-    "Type": "Type",
-    "Gender": "Geschlecht",
-    "Male": "Männlich",
-    "Female": "Weiblich",
-    "View": "Ansicht",
-    "Front": "Frontal",
-    "Side": "Seitlich",
-    "Back": "Rücken",
-    "AboveOrBelow": "Oberhalb oder unterhalb",
-    "ClassMode": "Klassenmodus",
-    "Class": "Klasse",
-    "Minutes": "protokoll",
-    "Seconds": "sekunden",
-    "Hour": "stunde",
-    "Hours": "Std.",
-    "NoTimers": "Keine Timer",
-    "OnlyMostRecentImages": "Nur kürzlich hinzugefügte Bilder verwenden",
-    "NumberOfImages": "Anzahl der Bilder",
-    "Start": "Anfang", 
-    "Time": "Zeit",
-		"Break": "Break",
+	"Filters": {
+		"All": "Alle",
+		"Type": "Typ",
+		"Gender": "Geschlecht",
+		"Male": "Männlich",
+		"Female": "Weiblich",
+		"View": "Ansicht",
+		"Front": "Frontal",
+		"Side": "Seitlich",
+		"Back": "Rücken",
+		"AboveOrBelow": "Oberhalb oder unterhalb",
+		"ClassMode": "Klassenmodus",
+		"Class": "Klasse",
+		"Minutes": "protokoll",
+		"Seconds": "sekunden",
+		"Hour": "stunde",
+		"Hours": "Std.",
+		"NoTimers": "Keine Timer",
+		"OnlyMostRecentImages": "Nur kürzlich hinzugefügte Bilder verwenden",
+		"NumberOfImages": "Anzahl der Bilder",
+		"Start": "Anfang",
+		"Time": "Zeit",
+		"Break": "Pause",
 		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
-  },
-  "Header": {
-    "Title": "r/SketchDaily Vorlagen",
-    "AddImages": "Füge Bilder hinzu",
-    "News": "Nachrichten",
-    "Logs": "Protokolle",
-    "LogIn": "Einloggen",
-    "LogOut": "Ausloggen",
-    "ManageImages": "Manage images",
-    "YourImages": "Your images"
-  },
-  "News": {
-    "WhatsNew": "Was gibt's Neues",
-    "Announcement": "Ankündigung"
-  },
-  "ImageViewer": {
-    "Timer": "Timer",
-    "Paused": "Pausiert",
-    "ImageInfo": "Bildinformationen",
-    "Source": "Quelle",
-    "Model": "Modell",
-    "Photographer": "Fotograf",
-    "DateAdded": "Hinzugefügt",
-    "TermsOfUse": "Nutzungsbedingungen",
-    "Classifications": "Klassifikationen",
-    "About": "Über",
-    "LeftControls": "Links - Vorheriges Bild",
-    "RightControls": "Recht - Nächstes Bild",
-    "SpacebarControls": "Leertaste - Pause",
-    "EscapeControls": "Flucht - Halt",
-    "VisitUsOnReddit": "Besuchen Sie uns auf Reddit!",
-		"Next": "Next",
+		"true": "Wahr",
+		"false": "Falsch"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Vorlagen",
+		"AddImages": "Füge Bilder hinzu",
+		"News": "Nachrichten",
+		"Logs": "Protokolle",
+		"LogIn": "Einloggen",
+		"LogOut": "Ausloggen",
+		"ManageImages": "Manage images",
+		"YourImages": "Your images"
+	},
+	"News": {
+		"WhatsNew": "Was gibt's Neues",
+		"Announcement": "Ankündigung"
+	},
+	"ImageViewer": {
+		"Timer": "Timer",
+		"Paused": "Pausiert",
+		"ImageInfo": "Bildinformationen",
+		"Source": "Quelle",
+		"Model": "Modell",
+		"Photographer": "Fotograf",
+		"DateAdded": "Hinzugefügt",
+		"TermsOfUse": "Nutzungsbedingungen",
+		"Classifications": "Klassifikationen",
+		"About": "Über",
+		"LeftControls": "Links - Vorheriges Bild",
+		"RightControls": "Recht - Nächstes Bild",
+		"SpacebarControls": "Leertaste - Pause",
+		"EscapeControls": "Flucht - Halt",
+		"VisitUsOnReddit": "Besuchen Sie uns auf Reddit!",
+		"Next": "Nächstes",
 		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
+		"ItsTimeForABreak": "Zeit für eine Pause. Die Übung geht weiter, wenn der Timer 0 erreicht.",
+		"NoMoreImages": "Es wurden keine weiteren Bilder die der Auswahl entsprechen gefunden. Sorry!",
+		"Close": "Schließen",
+		"ClassComplete": "Übung abgeschlossen",
+		"NiceWork": "Du hast die Übung erfolgreich abgeschlossen. Gut gemacht!",
 		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+	},
 	"Timers": {
-    "seconds": "{{total}} seconds",
+		"seconds": "{{total}} seconds",
 		"minutes": "{{total}} minutes",
 		"Class mode": "Class mode",
 		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"30 minutes": "30 Minuten",
+		"1 hour": "1 std",
+		"2 hours": "2 std",
+		"3 hours": "3 std",
+		"6 hours": "6 std"
 	}
 }
