--- a/UI/skd-ref-site/src/assets/i18n/es.json
+++ b/UI/skd-ref-site/src/assets/i18n/es.json
@@ -19,7 +19,7 @@
   "BodyPart": {
     "BodyPart": "Parte del cuerpo",
     "Hand": "Manos",
-    "Foot": "Feet",
+    "Foot": "Pies",
     "Head": "Cabezas",
     "All": "Todas"
   },
@@ -32,29 +32,29 @@
     "Category": "Categoría",
     "Living": "Vivo",
     "SkeletonOrBones": "Esqueleto o huesos",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
+    "Bug": "Insecto",
+		"Mammal": "Mamífero",
     "All": "Todas"
   },
   "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+		"Structure": "Estructura",
+		"House": "Casa",
+		"Building": "Edificio",
+		"Other": "Otro",
+		"All": "Todas"
 	},
 	"Vegetation": {
-		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
+		"Vegetation": "Vegetación",
+		"Flowers": "Flores",
+		"Plants": "Plantas",
 		"PhotoType": "Photo Type",
 		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
+		"Full": "Completo",
+		"All": "Todas"
 	},
   "Filters": {
     "All": "Todas",	
-    "Type": "Type",
+    "Type": "Tipo",
     "Gender": "Género",
     "Male": "Masculino",
     "Female": "Femenino",
@@ -63,7 +63,7 @@
     "Side": "Lateral",
     "Back": "Posterior",
     "AboveOrBelow": "Arriba o abajo",
-    "ClassMode": "Modo de clase",
+    "ClassMode": "Modo clase",
     "Class": "Clase",
     "Minutes": "minutos",
     "Seconds": "segundos",
@@ -73,11 +73,11 @@
     "OnlyMostRecentImages": "Solo usar imágenes recientes",
     "NumberOfImages": "Número de imágenes",
     "Start": "Iniciar", 
-    "Time": "Hora",
-		"Break": "Break",
+    "Time": "Tiempo",
+		"Break": "Descanso",
 		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
+		"true": "Verdadero",
+		"false": "Falso"
   },
   "Header": {
     "Title": "r/Referencias SketchDaily",
@@ -86,15 +86,15 @@
     "Logs": "Registros",
     "LogIn": "Iniciar sesión",
     "LogOut": "Cerrar sesión",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
+    "YourImages": "Tus imágenes",
+    "ManageImages": "Gestionar imágenes"
   },
   "News": {
     "WhatsNew": "Qué hay de nuevo",
     "Announcement": "Anuncio"
   },
   "ImageViewer": {
-    "Timer": "Minutero",
+    "Timer": "Contador",
     "Paused": "Pausado",
     "ImageInfo": "Más información",
     "Source": "Fuente",
@@ -104,29 +104,29 @@
     "TermsOfUse": "Términos de uso",
     "Classifications": "Clasificaciones",
     "About": "Acerca de",
-    "LeftControls": "Left - Imagen anterior",
-    "RightControls": "Right - Imagen siguiente",
-    "SpacebarControls": "Spacebar - Pausa",
-    "EscapeControls": "Escape - Detener",
+    "LeftControls": "Izquierda - Imagen anterior",
+    "RightControls": "Derecha - Imagen siguiente",
+    "SpacebarControls": "Espacio - Pausa",
+    "EscapeControls": "Espacio - Detener",
     "VisitUsOnReddit": "Visítanos en Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
+		"Next": "Siguiente",
+		"TakeABreak": "¡Toma un descanso!",
+		"ItsTimeForABreak": "Es hora de un descanso. Tu clase se renudará cuando el contador llegue a 0.",
+		"NoMoreImages": "¡Lo sentimos! Ninguna imagen coincide con tu búsqueda.",
+		"Close": "Cerrar",
+		"ClassComplete": "Clase completada",
+		"NiceWork": "Buen trabajo, has terminado la clase!",
+		"MaybeTakeABreak": "Tal vez tómate un descanso y echa un vistazo a lo que ocurre en <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
   },
 	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
-		"Class mode": "Class mode",
-		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"seconds": "{{total}} segundos",
+		"minutes": "{{total}} minutos",
+		"Class mode": "Modo clase",
+		"No timers": "Sin temporizadores",
+		"30 minutes": "30 minutos",
+		"1 hour": "1 hora",
+		"2 hours": "2 horas",
+		"3 hours": "3 horas",
+		"6 hours": "6 horas"
 	}
 }
