--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Здравствуйте!",
-    "Welcome": "Добро пожаловать на сайт натуры для рисования SketchDaily",
-    "LookingForSomethingElseToDraw": "Хотите нарисовать что-то другое?",
-    "JoinTheFun": "Присоединяйтесь!"
-  },
-  "FullBody": {
-    "FullBody": "Целое Тело",
-    "All": "Все",
-    "Clothing": "Одежда",
-    "Clothed": "Одетые",
-    "Nude": "Обнаженные",
-    "IncludeNSFWImages": "Включить фотографии для взрослых",
-    "Pose": "Поза",
-    "Action": "В действии",
-    "Stationary": "Неподвижные"
-  },
-  "BodyPart": {
-    "BodyPart": "Часть тела",
-    "Hand": "Руки",
-    "Foot": "Feet",
-    "Head": "Головы",
-    "All": "Все"
-  },
-  "Animal": {
-    "Animal": "животное",
-    "Species": "вид",
-    "Bird": "Птица",
-    "Fish": "Рыба",
-    "ReptileOrAmphibian": "Рептилия или амфибия",
-    "Category": "Категория",
-    "Living": "жизнь",
-    "SkeletonOrBones": "Скелет или кости",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
-    "All": "Все"
-  },
-  "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+	"Welcome": {
+		"Hello": "Здравствуйте!",
+		"Welcome": "Добро пожаловать на сайт натуры для рисования SketchDaily",
+		"LookingForSomethingElseToDraw": "Хотите нарисовать что-то другое?",
+		"JoinTheFun": "Присоединяйтесь!"
+	},
+	"FullBody": {
+		"FullBody": "Целое Тело",
+		"All": "Все",
+		"Clothing": "Одежда",
+		"Clothed": "Одетые",
+		"Nude": "Обнаженные",
+		"IncludeNSFWImages": "Включить фотографии для взрослых",
+		"Pose": "Поза",
+		"Action": "В действии",
+		"Stationary": "Неподвижные"
+	},
+	"BodyPart": {
+		"BodyPart": "Часть тела",
+		"Hand": "Руки",
+		"Foot": "Feet",
+		"Head": "Головы",
+		"All": "Все"
+	},
+	"Animal": {
+		"Animal": "Животное",
+		"Species": "Виды",
+		"Bird": "Птица",
+		"Fish": "Рыба",
+		"ReptileOrAmphibian": "Рептилия или амфибия",
+		"Category": "Категория",
+		"Living": "Живые",
+		"SkeletonOrBones": "Скелет или кости",
+		"Bug": "Насекомые",
+		"Mammal": "Млекопитающие",
+		"All": "Все"
+	},
+	"Structure": {
+		"Structure": "Сооружения",
+		"House": "Дом",
+		"Building": "Здание",
+		"Other": "Прочее",
+		"All": "Все"
 	},
 	"Vegetation": {
-		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
+		"Vegetation": "Растительность",
+		"Flowers": "Цветы",
+		"Plants": "Растения",
+		"PhotoType": "Тип фотографии",
+		"Closeup": "Детали",
+		"Full": "Полный вид",
+		"All": "Все"
 	},
-  "Filters": {
-    "All": "Bce",	
-    "Type": "Type",
-    "Gender": "Пол",
-    "Male": "Мужской",
-    "Female": "Женский",
-    "View": "Вид",
-    "Front": "Спереди",
-    "Side": "Сбоку",
-    "Back": "Сзади",
-    "AboveOrBelow": "Выше или ниже",
-    "ClassMode": "Режим класса",
-    "Class": "Класс",
-    "Minutes": "минут",
-    "Seconds": "секунд",
-    "Hour": "час",
-    "Hours": "часов",
-    "NoTimers": "Нет таймеров",
-    "OnlyMostRecentImages": "Использовать только недавние картинки",
-    "NumberOfImages": "Количество изображений",
-    "Start": "Старт", 
-    "Time": "Время",
-		"Break": "Break",
-		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
-  },
-  "Header": {
-    "Title": "Помощь Для Рисования С Натуры r/SketchDaily",
-    "AddImages": "Добавить изображения",
-    "News": "Новости",
-    "Logs": "бревна",
-    "LogIn": "Авторизоваться",
-    "LogOut": "Выйти",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
-  },
-  "News": {
-    "WhatsNew": "Что Нового",
-    "Announcement": "Объявление"
-  },
-  "ImageViewer": {
-    "Timer": "таймер",
-    "Paused": "Приостановлена",
-    "ImageInfo": "Информация О Картинке",
-    "Source": "Источник",
-    "Model": "Модель",
-    "Photographer": "Фотограф",
-    "DateAdded": "Дата Добавления",
-    "TermsOfUse": "Условия Использованя",
-    "Classifications": "классификации",
-    "About": "О Сайте",
-    "LeftControls": "Оставил - Предыдущее изображение",
-    "RightControls": "Правильно - Следующее изображение",
-    "SpacebarControls": "Пробел - Пауза",
-    "EscapeControls": "Побег - Стоп",
-    "VisitUsOnReddit": "Посетите нас на Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+	"Filters": {
+		"All": "Bce",
+		"Type": "Тип",
+		"Gender": "Пол",
+		"Male": "Мужской",
+		"Female": "Женский",
+		"View": "Вид",
+		"Front": "Спереди",
+		"Side": "Сбоку",
+		"Back": "Сзади",
+		"AboveOrBelow": "Выше или ниже",
+		"ClassMode": "Режим класса",
+		"Class": "Класс",
+		"Minutes": "Минут",
+		"Seconds": "Секунд",
+		"Hour": "Час",
+		"Hours": "Часов",
+		"NoTimers": "Нет таймеров",
+		"OnlyMostRecentImages": "Использовать только недавние картинки",
+		"NumberOfImages": "Количество изображений",
+		"Start": "Старт",
+		"Time": "Время",
+		"Break": "Стоп",
+		"NSFW": "18+",
+		"true": "Истина",
+		"false": "Ложь"
+	},
+	"Header": {
+		"Title": "Помощь Для Рисования С Натуры r/SketchDaily",
+		"AddImages": "Добавить изображения",
+		"News": "Новости",
+		"Logs": "Логи",
+		"LogIn": "Авторизоваться",
+		"LogOut": "Выйти",
+		"YourImages": "Ваши изображения",
+		"ManageImages": "Управление изображениями"
+	},
+	"News": {
+		"WhatsNew": "Что нового",
+		"Announcement": "Объявление"
+	},
+	"ImageViewer": {
+		"Timer": "Таймер",
+		"Paused": "Приостановлена",
+		"ImageInfo": "Информация о картинке",
+		"Source": "Источник",
+		"Model": "Модель",
+		"Photographer": "Фотограф",
+		"DateAdded": "Дата добавления",
+		"TermsOfUse": "Условия использованя",
+		"Classifications": "Классификации",
+		"About": "О Сайте",
+		"LeftControls": "Влево - Предыдущее изображение",
+		"RightControls": "Вправо - Следующее изображение",
+		"SpacebarControls": "Пробел - Пауза",
+		"EscapeControls": "Esc - Стоп",
+		"VisitUsOnReddit": "Посетите нас на Reddit!",
+		"Next": "Далее",
+		"TakeABreak": "Перерыв",
+		"ItsTimeForABreak": "Идет перерыв. Занятия продолжатся, когда таймер достигнет 0.",
+		"NoMoreImages": "Больше нет изображений по вашему запросу. Что поделать!",
+		"Close": "Закрыть",
+		"ClassComplete": "Занятие окончено",
+		"NiceWork": "Поздравляю, вы окончили занятие!",
+		"MaybeTakeABreak": "Может, перерыв и поболтаем? <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
+	},
 	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
-		"Class mode": "Class mode",
-		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"seconds": "{{total}} секунд",
+		"minutes": "{{total}} минут",
+		"Class mode": "Режим занятия",
+		"No timers": "Без таймеров",
+		"30 minutes": "30 минут",
+		"1 hour": "1 час",
+		"2 hours": "2 часа",
+		"3 hours": "3 часа",
+		"6 hours": "6 часов"
 	}
 }
