--- a/UI/skd-ref-site/src/assets/i18n/es.json
+++ b/UI/skd-ref-site/src/assets/i18n/es.json
@@ -1,42 +1,42 @@
 {
-  "Welcome": {
-    "Hello": "¡Hola!",
-    "Welcome": "Bienvenido a la herramienta de referencias SketchDaily.",
-    "LookingForSomethingElseToDraw": "¿Buscando algo más para dibujar?",
-    "JoinTheFun": "¡Únete a la diversión!"
-  },
-  "FullBody": {
-    "FullBody": "Cuerpo completo",
-    "All": "Todas",
-    "Clothing": "Vestimenta",
-    "Clothed": "Vestidos",
-    "Nude": "Desnudos",
-    "IncludeNSFWImages": "Incluir imágenes no apropiadas para el trabajo",
-    "Pose": "Pose",
-    "Action": "Acción",
-    "Stationary": "Estática"
-  },
-  "BodyPart": {
-    "BodyPart": "Parte del cuerpo",
-    "Hand": "Manos",
-    "Foot": "Pies",
-    "Head": "Cabezas",
-    "All": "Todas"
-  },
-  "Animal": {
-    "Animal": "Animal",
-    "Species": "Especies",
-    "Bird": "Ave",
-    "Fish": "Pez",
-    "ReptileOrAmphibian": "Reptil o anfibio",
-    "Category": "Categoría",
-    "Living": "Vivo",
-    "SkeletonOrBones": "Esqueleto o huesos",
-    "Bug": "Insecto",
+	"Welcome": {
+		"Hello": "¡Hola!",
+		"Welcome": "Bienvenido a la herramienta de referencias SketchDaily.",
+		"LookingForSomethingElseToDraw": "¿Buscando algo más para dibujar?",
+		"JoinTheFun": "¡Únete a la diversión!"
+	},
+	"FullBody": {
+		"FullBody": "Cuerpo completo",
+		"All": "Todas",
+		"Clothing": "Vestimenta",
+		"Clothed": "Vestidos",
+		"Nude": "Desnudos",
+		"IncludeNSFWImages": "Incluir imágenes no apropiadas para el trabajo",
+		"Pose": "Pose",
+		"Action": "Acción",
+		"Stationary": "Estática"
+	},
+	"BodyPart": {
+		"BodyPart": "Parte del cuerpo",
+		"Hand": "Manos",
+		"Foot": "Pies",
+		"Head": "Cabezas",
+		"All": "Todas"
+	},
+	"Animal": {
+		"Animal": "Animal",
+		"Species": "Especies",
+		"Bird": "Ave",
+		"Fish": "Pez",
+		"ReptileOrAmphibian": "Reptil o anfibio",
+		"Category": "Categoría",
+		"Living": "Vivo",
+		"SkeletonOrBones": "Esqueleto o huesos",
+		"Bug": "Insecto",
 		"Mammal": "Mamífero",
-    "All": "Todas"
-  },
-  "Structure": {
+		"All": "Todas"
+	},
+	"Structure": {
 		"Structure": "Estructura",
 		"House": "Casa",
 		"Building": "Edificio",
@@ -47,68 +47,68 @@
 		"Vegetation": "Vegetación",
 		"Flowers": "Flores",
 		"Plants": "Plantas",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
+		"PhotoType": "Tipo de Foto",
+		"Closeup": "De Cerca",
 		"Full": "Completo",
 		"All": "Todas"
 	},
-  "Filters": {
-    "All": "Todas",	
-    "Type": "Tipo",
-    "Gender": "Género",
-    "Male": "Masculino",
-    "Female": "Femenino",
-    "View": "Vista",
-    "Front": "Frontal",
-    "Side": "Lateral",
-    "Back": "Posterior",
-    "AboveOrBelow": "Arriba o abajo",
-    "ClassMode": "Modo clase",
-    "Class": "Clase",
-    "Minutes": "minutos",
-    "Seconds": "segundos",
-    "Hour": "hora",
-    "Hours": "horas",
-    "NoTimers": "Sin temporizadores",
-    "OnlyMostRecentImages": "Solo usar imágenes recientes",
-    "NumberOfImages": "Número de imágenes",
-    "Start": "Iniciar", 
-    "Time": "Tiempo",
+	"Filters": {
+		"All": "Todas",
+		"Type": "Tipo",
+		"Gender": "Género",
+		"Male": "Masculino",
+		"Female": "Femenino",
+		"View": "Vista",
+		"Front": "Frontal",
+		"Side": "Lateral",
+		"Back": "Posterior",
+		"AboveOrBelow": "Arriba o abajo",
+		"ClassMode": "Modo clase",
+		"Class": "Clase",
+		"Minutes": "minutos",
+		"Seconds": "segundos",
+		"Hour": "hora",
+		"Hours": "horas",
+		"NoTimers": "Sin temporizadores",
+		"OnlyMostRecentImages": "Solo usar imágenes recientes",
+		"NumberOfImages": "Número de imágenes",
+		"Start": "Iniciar",
+		"Time": "Tiempo",
 		"Break": "Descanso",
 		"NSFW": "NSFW",
 		"true": "Verdadero",
 		"false": "Falso"
-  },
-  "Header": {
-    "Title": "r/Referencias SketchDaily",
-    "AddImages": "Añadir imágenes",
-    "News": "Noticias",
-    "Logs": "Registros",
-    "LogIn": "Iniciar sesión",
-    "LogOut": "Cerrar sesión",
-    "YourImages": "Tus imágenes",
-    "ManageImages": "Gestionar imágenes"
-  },
-  "News": {
-    "WhatsNew": "Qué hay de nuevo",
-    "Announcement": "Anuncio"
-  },
-  "ImageViewer": {
-    "Timer": "Contador",
-    "Paused": "Pausado",
-    "ImageInfo": "Más información",
-    "Source": "Fuente",
-    "Model": "Modelo",
-    "Photographer": "Fotografia por",
-    "DateAdded": "Agregado en",
-    "TermsOfUse": "Términos de uso",
-    "Classifications": "Clasificaciones",
-    "About": "Acerca de",
-    "LeftControls": "Izquierda - Imagen anterior",
-    "RightControls": "Derecha - Imagen siguiente",
-    "SpacebarControls": "Espacio - Pausa",
-    "EscapeControls": "Espacio - Detener",
-    "VisitUsOnReddit": "Visítanos en Reddit!",
+	},
+	"Header": {
+		"Title": "r/Referencias SketchDaily",
+		"AddImages": "Añadir imágenes",
+		"News": "Noticias",
+		"Logs": "Registros",
+		"LogIn": "Iniciar sesión",
+		"LogOut": "Cerrar sesión",
+		"YourImages": "Tus imágenes",
+		"ManageImages": "Gestionar imágenes"
+	},
+	"News": {
+		"WhatsNew": "Qué hay de nuevo",
+		"Announcement": "Anuncio"
+	},
+	"ImageViewer": {
+		"Timer": "Contador",
+		"Paused": "Pausado",
+		"ImageInfo": "Información de la Imagen",
+		"Source": "Fuente",
+		"Model": "Modelo",
+		"Photographer": "Fotógrafo",
+		"DateAdded": "Agregado en",
+		"TermsOfUse": "Términos de uso",
+		"Classifications": "Clasificaciones",
+		"About": "Acerca de",
+		"LeftControls": "Izquierda - Imagen anterior",
+		"RightControls": "Derecha - Imagen siguiente",
+		"SpacebarControls": "Espacio - Pausa",
+		"EscapeControls": "Escape - Detener",
+		"VisitUsOnReddit": "Visítanos en Reddit!",
 		"Next": "Siguiente",
 		"TakeABreak": "¡Toma un descanso!",
 		"ItsTimeForABreak": "Es hora de un descanso. Tu clase se renudará cuando el contador llegue a 0.",
@@ -117,7 +117,7 @@
 		"ClassComplete": "Clase completada",
 		"NiceWork": "Buen trabajo, has terminado la clase!",
 		"MaybeTakeABreak": "Tal vez tómate un descanso y echa un vistazo a lo que ocurre en <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+	},
 	"Timers": {
 		"seconds": "{{total}} segundos",
 		"minutes": "{{total}} minutos",
