--- a/UI/skd-ref-site/src/assets/i18n/pt.json
+++ b/UI/skd-ref-site/src/assets/i18n/pt.json
@@ -19,7 +19,7 @@
   "BodyPart": {
     "BodyPart": "Parte do corpo",
     "Hand": "Mãos",
-    "Foot": "Feet",
+    "Foot": "Pés",
     "Head": "Cabeças",
     "All": "Todas"
   },
@@ -32,29 +32,29 @@
     "Category": "Categoria",
     "Living": "Vivo",
     "SkeletonOrBones": "Esqueleto ou ossos",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
+    "Bug": "Inseto",
+    "Mammal": "mamífero",
     "All": "Todas"
   },
   "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
-	},
-	"Vegetation": {
-		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
-	},
+    "Structure": "estrutura",
+    "House": "Casa",
+    "Building": "Building",
+    "Other": "Outros",
+    "All": "Todos"
+  },
+  "Vegetation": {
+    "Vegetation": "Vegetação",
+    "Flowers": "Flores",
+    "Plants": "Plantas",
+    "PhotoType": "Photo Type",
+    "Closeup": "Closeup",
+    "Full": "Full",
+    "All": "All"
+  },
   "Filters": {
     "All": "Todas",
-    "Type": "Type",	
+    "Type": "Type",
     "Gender": "Gênero",
     "Male": "Masculino",
     "Female": "Feminino",
@@ -72,12 +72,12 @@
     "NoTimers": "Sem temporizadores",
     "OnlyMostRecentImages": "Usar somente imagens recentes",
     "NumberOfImages": "Número de imagens",
-    "Start": "Começar", 
+    "Start": "Começar",
     "Time": "Tempo",
-		"Break": "Break",
-		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
+    "Break": "Break",
+    "NSFW": "NSFW",
+    "true": "True",
+    "false": "False"
   },
   "Header": {
     "Title": "r/SketchDaily Referências",
@@ -109,24 +109,24 @@
     "SpacebarControls": "Spacebar - Pausa",
     "EscapeControls": "Escape - Pare",
     "VisitUsOnReddit": "Visite-nos no Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
+    "Next": "Next",
+    "TakeABreak": "Take a break!",
+    "ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
+    "NoMoreImages": "No more images matching your filters. Sorry!",
+    "Close": "Close",
+    "ClassComplete": "Class complete",
+    "NiceWork": "Nice work, you finished the class!",
+    "MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
   },
-	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
-		"Class mode": "Class mode",
-		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
-	}
+  "Timers": {
+    "seconds": "{{total}} seconds",
+    "minutes": "{{total}} minutes",
+    "Class mode": "Class mode",
+    "No timers": "No timers",
+    "30 minutes": "30 minutes",
+    "1 hour": "1 hour",
+    "2 hours": "2 hours",
+    "3 hours": "3 hours",
+    "6 hours": "6 hours"
+  }
 }
