--- a/UI/skd-ref-site/src/assets/i18n/de.json
+++ b/UI/skd-ref-site/src/assets/i18n/de.json
@@ -65,14 +65,14 @@
 		"AboveOrBelow": "Oberhalb oder unterhalb",
 		"ClassMode": "Klassenmodus",
 		"Class": "Klasse",
-		"Minutes": "protokoll",
-		"Seconds": "sekunden",
-		"Hour": "stunde",
+		"Minutes": "Protokoll",
+		"Seconds": "Sekunden",
+		"Hour": "Stunde",
 		"Hours": "Std.",
 		"NoTimers": "Keine Timer",
 		"OnlyMostRecentImages": "Nur kürzlich hinzugefügte Bilder verwenden",
 		"NumberOfImages": "Anzahl der Bilder",
-		"Start": "Anfang",
+		"Start": "Anfangen",
 		"Time": "Zeit",
 		"Break": "Pause",
 		"NSFW": "NSFW",
@@ -86,8 +86,8 @@
 		"Logs": "Protokolle",
 		"LogIn": "Einloggen",
 		"LogOut": "Ausloggen",
-		"ManageImages": "Manage images",
-		"YourImages": "Your images"
+		"ManageImages": "Bilder verwalten",
+		"YourImages": "Deine Bilder"
 	},
 	"News": {
 		"WhatsNew": "Was gibt's Neues",
@@ -110,7 +110,7 @@
 		"EscapeControls": "Flucht - Halt",
 		"VisitUsOnReddit": "Besuchen Sie uns auf Reddit!",
 		"Next": "Nächstes",
-		"TakeABreak": "Take a break!",
+		"TakeABreak": "Mach eine Pause!",
 		"ItsTimeForABreak": "Zeit für eine Pause. Die Übung geht weiter, wenn der Timer 0 erreicht.",
 		"NoMoreImages": "Es wurden keine weiteren Bilder die der Auswahl entsprechen gefunden. Sorry!",
 		"Close": "Schließen",
@@ -119,10 +119,10 @@
 		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
 	},
 	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
+		"seconds": "{{total}} Sekunden",
+		"minutes": "{{total}} Minuten",
 		"Class mode": "Class mode",
-		"No timers": "No timers",
+		"No timers": "Keine Zeitbegrenzung",
 		"30 minutes": "30 Minuten",
 		"1 hour": "1 std",
 		"2 hours": "2 std",
