--- a/UI/skd-ref-site/src/assets/i18n/fr.json
+++ b/UI/skd-ref-site/src/assets/i18n/fr.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Bonjour !",
-    "Welcome": "Bienvenue sur le site de références de SketchDaily.",
-    "LookingForSomethingElseToDraw": "Envie de dessiner autre chose ?",
-    "JoinTheFun": "Rejoignez-nous !"
-  },
-  "FullBody": {
-    "FullBody": "Corps entier",
-    "All": "Toute",
-    "Clothing": "Habillement",
-    "Clothed": "Habillé",
-    "Nude": "Nu",
-    "IncludeNSFWImages": "Inclure les images NSFW",
-    "Pose": "Pose",
-    "Action": "Action",
-    "Stationary": "Stationnaire"
-  },
-  "BodyPart": {
-    "BodyPart": "Partie du corps",
-    "Hand": "Mains",
-    "Foot": "Feet",
-    "Head": "Têtes",
-    "All": "Toute"
-  },
-  "Animal": {
-    "Animal": "Animal",
-    "Species": "Espèce",
-    "Bird": "Oiseau",
-    "Fish": "Poisson",
-    "ReptileOrAmphibian": "Reptile Ou Amphibien",
-    "Category": "Catégorie",
-    "Living": "Vivant",
-    "SkeletonOrBones": "Squelette ou os",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
-    "All": "Toute"
-  },
-  "Structure": {
+	"Welcome": {
+		"Hello": "Bonjour !",
+		"Welcome": "Bienvenue sur le site de références de SketchDaily.",
+		"LookingForSomethingElseToDraw": "Envie de dessiner autre chose ?",
+		"JoinTheFun": "Rejoignez-nous !"
+	},
+	"FullBody": {
+		"FullBody": "Corps entier",
+		"All": "Tous",
+		"Clothing": "Habillement",
+		"Clothed": "Habillé",
+		"Nude": "Nu",
+		"IncludeNSFWImages": "Inclure les images NSFW",
+		"Pose": "Pose",
+		"Action": "En mouvement",
+		"Stationary": "Immobile"
+	},
+	"BodyPart": {
+		"BodyPart": "Partie du corps",
+		"Hand": "Mains",
+		"Foot": "Pieds",
+		"Head": "Têtes",
+		"All": "Tous"
+	},
+	"Animal": {
+		"Animal": "Animal",
+		"Species": "Espèce",
+		"Bird": "Oiseau",
+		"Fish": "Poisson",
+		"ReptileOrAmphibian": "Reptile Ou Amphibien",
+		"Category": "Catégorie",
+		"Living": "Vivant",
+		"SkeletonOrBones": "Squelette ou os",
+		"Bug": "Insecte",
+		"Mammal": "Mammifère",
+		"All": "Tous"
+	},
+	"Structure": {
 		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+		"House": "Maison",
+		"Building": "Bâtiment",
+		"Other": "Autre",
+		"All": "Tous"
 	},
 	"Vegetation": {
 		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
+		"Flowers": "Fleurs",
+		"Plants": "Plantes",
+		"PhotoType": "Cadrage",
+		"Closeup": "Gros plan",
+		"Full": "Entier",
+		"All": "Tous"
 	},
-  "Filters": {
-    "All": "Toute",	
-    "Type": "Type",
-    "Gender": "Genre",
-    "Male": "Mâle",
-    "Female": "Femelle",
-    "View": "Vue",
-    "Front": "De devant",
-    "Side": "De côté",
-    "Back": "De derrière",
-    "AboveOrBelow": "Supérieure ou inférieure",
-    "ClassMode": "Mode classe",
-    "Class": "Classe",
-    "Minutes": "minutes",
-    "Seconds": "secondes",
-    "Hour": "heure",
-    "Hours": "heures",
-    "NoTimers": "Pas de minuteries",
-    "OnlyMostRecentImages": "Utiliser seulement les images les plus récentes",
-    "NumberOfImages": "Nombre d'images",
-    "Start": "Commencer", 
-    "Time": "Temps",
-		"Break": "Break",
+	"Filters": {
+		"All": "Tous",
+		"Type": "Type",
+		"Gender": "Genre",
+		"Male": "Homme",
+		"Female": "Femme",
+		"View": "Vue",
+		"Front": "De face",
+		"Side": "De profil",
+		"Back": "De dos",
+		"AboveOrBelow": "En plongée ou contre plongée",
+		"ClassMode": "Mode du cours",
+		"Class": "Cours",
+		"Minutes": "minutes",
+		"Seconds": "secondes",
+		"Hour": "heure",
+		"Hours": "heures",
+		"NoTimers": "Pas de minuterie",
+		"OnlyMostRecentImages": "Utiliser seulement les images les plus récentes",
+		"NumberOfImages": "Nombre d'images",
+		"Start": "Commencer",
+		"Time": "Temps",
+		"Break": "Pause",
 		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
-  },
-  "Header": {
-    "Title": "r/SketchDaily Références",
-    "AddImages": "Ajouter des images",
-    "News": "Nouvelles",
-    "Logs": "Journaux",
-    "LogIn": "S'identifier",
-    "LogOut": "Connectez - Out",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
-  },
-  "News": {
-    "WhatsNew": "Quoi de neuf",
-    "Announcement": "Annonce"
-  },
-  "ImageViewer": {
-    "Timer": "Minuteur",
-    "Paused": "En pause",
-    "ImageInfo": "Informations de l'image",
-    "Source": "Source",
-    "Model": "Modèle",
-    "Photographer": "Photographe",
-    "DateAdded": "Date d'ajout",
-    "TermsOfUse": "Conditions d'utilisation",
-    "Classifications": "Classifications",
-    "About": "A propos",
-    "LeftControls": "Left - Image précédente",
-    "RightControls": "Right - Image suivante",
-    "SpacebarControls": "Spacebar - Pause",
-    "EscapeControls": "Escape - Arrêtez",
-    "VisitUsOnReddit": "Visitez-nous sur Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+		"true": "Vrai",
+		"false": "Faux"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Références",
+		"AddImages": "Ajouter des images",
+		"News": "Nouvelles",
+		"Logs": "Identifiants",
+		"LogIn": "S'identifier",
+		"LogOut": "Se déconnecter",
+		"YourImages": "Vosimages",
+		"ManageImages": "Gestion des images"
+	},
+	"News": {
+		"WhatsNew": "Quoi de neuf",
+		"Announcement": "Annonce"
+	},
+	"ImageViewer": {
+		"Timer": "Minuteur",
+		"Paused": "En pause",
+		"ImageInfo": "Informations de l'image",
+		"Source": "Source",
+		"Model": "Modèle",
+		"Photographer": "Photographe",
+		"DateAdded": "Date d'ajout",
+		"TermsOfUse": "Conditions d'utilisation",
+		"Classifications": "Catégorie",
+		"About": "A propos",
+		"LeftControls": "Gauche - Image précédente",
+		"RightControls": "Droite - Image suivante",
+		"SpacebarControls": "Barre espace - Pause",
+		"EscapeControls": "Echap - Arrêter",
+		"VisitUsOnReddit": "Visitez-nous sur Reddit!",
+		"Next": "Suivant",
+		"TakeABreak": "Faîtes une pause !",
+		"ItsTimeForABreak": "C'est l'heure de faire une pause. Le cours reprendra lorsque le chronomètre sera revenu à 0.",
+		"NoMoreImages": "Il n'y a plus d'images correspondant à votre recherche. Désolé.",
+		"Close": "Fermer",
+		"ClassComplete": "Cours terminé.",
+		"NiceWork": "Beau travail, vous avez fini le cours.",
+		"MaybeTakeABreak": "Faîtes peut être une pause et profitez-en pour voir ce que les gens ont fait sur <a href='https://www.reddit.com/r/sketchdaily'>subreddit !</a>"
+	},
 	"Timers": {
-		"seconds": "{{total}} seconds",
+		"seconds": "{{total}} secondes",
 		"minutes": "{{total}} minutes",
-		"Class mode": "Class mode",
-		"No timers": "No timers",
+		"Class mode": "Mode cours",
+		"No timers": "Pas de minuteur",
 		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"1 hour": "1 heure",
+		"2 hours": "2 heures",
+		"3 hours": "3 heures",
+		"6 hours": "6 heures"
 	}
 }
