--- a/UI/skd-ref-site/src/assets/i18n/pt.json
+++ b/UI/skd-ref-site/src/assets/i18n/pt.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Olá!",
-    "Welcome": "Bem vindo ao SketchDaily 'Esboço Diário'",
-    "LookingForSomethingElseToDraw": "Procurando algo para desenhar?",
-    "JoinTheFun": "Aproveite e divirta-se!"
-  },
-  "FullBody": {
-    "FullBody": "Corpo Inteiro",
-    "All": "Todas",
-    "Clothing": "Roupas",
-    "Clothed": "Com roupas",
-    "Nude": "Sem roupas",
-    "IncludeNSFWImages": "Incluir imagens NSFW",
-    "Pose": "Pose",
-    "Action": "Em Ação",
-    "Stationary": "Parado"
-  },
-  "BodyPart": {
-    "BodyPart": "Parte do corpo",
-    "Hand": "Mãos",
-    "Foot": "Pés",
-    "Head": "Cabeças",
-    "All": "Todas"
-  },
-  "Animal": {
-    "Animal": "Animal",
-    "Species": "Espécies",
-    "Bird": "Pássaro",
-    "Fish": "Peixe",
-    "ReptileOrAmphibian": "Réptil ou anfíbio",
-    "Category": "Categoria",
-    "Living": "Vivo",
-    "SkeletonOrBones": "Esqueleto ou ossos",
-    "Bug": "Inseto",
-    "Mammal": "mamífero",
-    "All": "Todas"
-  },
-  "Structure": {
-    "Structure": "estrutura",
-    "House": "Casa",
-    "Building": "Building",
-    "Other": "Outros",
-    "All": "Todos"
-  },
-  "Vegetation": {
-    "Vegetation": "Vegetação",
-    "Flowers": "Flores",
-    "Plants": "Plantas",
-    "PhotoType": "Photo Type",
-    "Closeup": "Closeup",
-    "Full": "Full",
-    "All": "All"
-  },
-  "Filters": {
-    "All": "Todas",
-    "Type": "Type",
-    "Gender": "Gênero",
-    "Male": "Masculino",
-    "Female": "Feminino",
-    "View": "Visão",
-    "Front": "Frontal",
-    "Side": "De lado",
-    "Back": "Traseira",
-    "AboveOrBelow": "Acima ou abaixo",
-    "ClassMode": "Modo de classe",
-    "Class": "Classe",
-    "Minutes": "minutos",
-    "Seconds": "segundos",
-    "Hour": "hora",
-    "Hours": "horas",
-    "NoTimers": "Sem temporizadores",
-    "OnlyMostRecentImages": "Usar somente imagens recentes",
-    "NumberOfImages": "Número de imagens",
-    "Start": "Começar",
-    "Time": "Tempo",
-    "Break": "Break",
-    "NSFW": "NSFW",
-    "true": "True",
-    "false": "False"
-  },
-  "Header": {
-    "Title": "r/SketchDaily Referências",
-    "AddImages": "Adicionar imagens",
-    "News": "Notícia",
-    "Logs": "Logs",
-    "LogIn": "Entrar",
-    "LogOut": "Sair",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
-  },
-  "News": {
-    "WhatsNew": "Novidades",
-    "Announcement": "Anúncio"
-  },
-  "ImageViewer": {
-    "Timer": "Cronômetro",
-    "Paused": "Pausado",
-    "ImageInfo": "Informação da Imagem",
-    "Source": "Fonte",
-    "Model": "Modelo",
-    "Photographer": "Fotógrafo",
-    "DateAdded": "Data adicionada",
-    "TermsOfUse": "Termos de Uso",
-    "Classifications": "Classificações",
-    "About": "Sobre",
-    "LeftControls": "Left - Imagem anterior",
-    "RightControls": "Right - Próxima imagem",
-    "SpacebarControls": "Spacebar - Pausa",
-    "EscapeControls": "Escape - Pare",
-    "VisitUsOnReddit": "Visite-nos no Reddit!",
-    "Next": "Next",
-    "TakeABreak": "Take a break!",
-    "ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-    "NoMoreImages": "No more images matching your filters. Sorry!",
-    "Close": "Close",
-    "ClassComplete": "Class complete",
-    "NiceWork": "Nice work, you finished the class!",
-    "MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
-  "Timers": {
-    "seconds": "{{total}} seconds",
-    "minutes": "{{total}} minutes",
-    "Class mode": "Class mode",
-    "No timers": "No timers",
-    "30 minutes": "30 minutes",
-    "1 hour": "1 hour",
-    "2 hours": "2 hours",
-    "3 hours": "3 hours",
-    "6 hours": "6 hours"
-  }
+	"Welcome": {
+		"Hello": "Olá!",
+		"Welcome": "Bem vindo ao SketchDaily 'Esboço Diário'",
+		"LookingForSomethingElseToDraw": "Procurando algo para desenhar?",
+		"JoinTheFun": "Aproveite e divirta-se!"
+	},
+	"FullBody": {
+		"FullBody": "Corpo Inteiro",
+		"All": "Todas",
+		"Clothing": "Roupas",
+		"Clothed": "Com roupas",
+		"Nude": "Sem roupas",
+		"IncludeNSFWImages": "Incluir imagens NSFW",
+		"Pose": "Pose",
+		"Action": "Em Ação",
+		"Stationary": "Parado"
+	},
+	"BodyPart": {
+		"BodyPart": "Parte do corpo",
+		"Hand": "Mãos",
+		"Foot": "Pés",
+		"Head": "Cabeças",
+		"All": "Todas"
+	},
+	"Animal": {
+		"Animal": "Animal",
+		"Species": "Espécies",
+		"Bird": "Pássaro",
+		"Fish": "Peixe",
+		"ReptileOrAmphibian": "Réptil ou anfíbio",
+		"Category": "Categoria",
+		"Living": "Vivo",
+		"SkeletonOrBones": "Esqueleto ou ossos",
+		"Bug": "Inseto",
+		"Mammal": "Mamífero",
+		"All": "Todas"
+	},
+	"Structure": {
+		"Structure": "Estrutura",
+		"House": "Casa",
+		"Building": "Prédio",
+		"Other": "Outros",
+		"All": "Todos"
+	},
+	"Vegetation": {
+		"Vegetation": "Vegetação",
+		"Flowers": "Flores",
+		"Plants": "Plantas",
+		"PhotoType": "Tipo de Foto",
+		"Closeup": "Closeup",
+		"Full": "Full",
+		"All": "Todas"
+	},
+	"Filters": {
+		"All": "Todas",
+		"Type": "Tipo",
+		"Gender": "Gênero",
+		"Male": "Masculino",
+		"Female": "Feminino",
+		"View": "Visão",
+		"Front": "Frontal",
+		"Side": "De lado",
+		"Back": "Traseira",
+		"AboveOrBelow": "Acima ou abaixo",
+		"ClassMode": "Modo de Aula",
+		"Class": "Aula",
+		"Minutes": "minutos",
+		"Seconds": "segundos",
+		"Hour": "hora",
+		"Hours": "horas",
+		"NoTimers": "Sem temporizadores",
+		"OnlyMostRecentImages": "Usar somente imagens recentes",
+		"NumberOfImages": "Número de imagens",
+		"Start": "Começar",
+		"Time": "Tempo",
+		"Break": "Pausa",
+		"NSFW": "NSFW",
+		"true": "Verdadeiro",
+		"false": "Falso"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Referências",
+		"AddImages": "Adicionar imagens",
+		"News": "Notícias",
+		"Logs": "Logs",
+		"LogIn": "Entrar",
+		"LogOut": "Sair",
+		"YourImages": "Suas imagens",
+		"ManageImages": "Gerenciar imagens"
+	},
+	"News": {
+		"WhatsNew": "Novidades",
+		"Announcement": "Anúncio"
+	},
+	"ImageViewer": {
+		"Timer": "Cronômetro",
+		"Paused": "Pausado",
+		"ImageInfo": "Informação da Imagem",
+		"Source": "Fonte",
+		"Model": "Modelo",
+		"Photographer": "Fotógrafo",
+		"DateAdded": "Data adicionada",
+		"TermsOfUse": "Termos de Uso",
+		"Classifications": "Classificações",
+		"About": "Sobre",
+		"LeftControls": "Left - Imagem anterior",
+		"RightControls": "Right - Próxima imagem",
+		"SpacebarControls": "Spacebar - Pausa",
+		"EscapeControls": "Escape - Pare",
+		"VisitUsOnReddit": "Visite-nos no Reddit!",
+		"Next": "Próximo",
+		"TakeABreak": "Dê uma pausa!",
+		"ItsTimeForABreak": "Hora da pausa. Sua aula retornará quando o temporizador chegar a 0.",
+		"NoMoreImages": "No more images matching your filters. Sorry!",
+		"Close": "Fechar",
+		"ClassComplete": "Aula concluída",
+		"NiceWork": "Bom trabalho, você terminou a aula!",
+		"MaybeTakeABreak": "Que tal dar uma pequena pausa e ver o que está sendo compartilhado no <a href='https://www.reddit.com/r/sketchdaily'> subreddit!</a>"
+	},
+	"Timers": {
+		"seconds": "{{total}} segundos",
+		"minutes": "{{total}} minutos",
+		"Class mode": "Modo de Aula",
+		"No timers": "Sem temporizadores",
+		"30 minutes": "30 minutos",
+		"1 hour": "1 hora",
+		"2 hours": "2 horas",
+		"3 hours": "3 horas",
+		"6 hours": "6 horas"
+	}
 }
