--- a/UI/skd-ref-site/src/assets/i18n/sv.json
+++ b/UI/skd-ref-site/src/assets/i18n/sv.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Hej!",
-    "Welcome": "Välkommen till SketchDailys referensmojäng.",
-    "LookingForSomethingElseToDraw": "Letar du efter något annat att rita?",
-    "JoinTheFun": "Delta i det roliga!"
-  },
-  "FullBody": {
-    "FullBody": "Helkropp",
-    "All": "Alla",
-    "Clothing": "Kläder",
-    "Clothed": "Påklädd",
-    "Nude": "Naken",
-    "IncludeNSFWImages": "Inludera icke-arbetssäkra(NSFW) bilder",
-    "Pose": "Pose",
-    "Action": "I rörelse",
-    "Stationary": "Stillastående"
-  },
-  "BodyPart": {
-    "BodyPart": "Kroppsdel",
-    "Hand": "Händer",
-    "Foot": "Feet",
-    "Head": "Huvud",
-    "All": "Alla"
-  },
-  "Animal": {
-    "Animal": "Djur",
-    "Species": "Arter",
-    "Bird": "Fågel",
-    "Fish": "Fisk",
-    "ReptileOrAmphibian": "Reptil eller amfibier",
-    "Category": "Kategori",
-    "Living": "Levande",
-    "SkeletonOrBones": "Skelett eller ben",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
-    "All": "Alla"
-  },
-  "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+	"Welcome": {
+		"Hello": "Hej!",
+		"Welcome": "Välkommen till SketchDailys referensmojäng.",
+		"LookingForSomethingElseToDraw": "Letar du efter något annat att rita?",
+		"JoinTheFun": "Delta i det roliga!"
+	},
+	"FullBody": {
+		"FullBody": "Helkropp",
+		"All": "Alla",
+		"Clothing": "Kläder",
+		"Clothed": "Påklädd",
+		"Nude": "Naken",
+		"IncludeNSFWImages": "Inkludera icke-arbetssäkra(NSFW) bilder",
+		"Pose": "Pose",
+		"Action": "I rörelse",
+		"Stationary": "Stillastående"
+	},
+	"BodyPart": {
+		"BodyPart": "Kroppsdel",
+		"Hand": "Händer",
+		"Foot": "Fötter",
+		"Head": "Huvud",
+		"All": "Alla"
+	},
+	"Animal": {
+		"Animal": "Djur",
+		"Species": "Arter",
+		"Bird": "Fågel",
+		"Fish": "Fisk",
+		"ReptileOrAmphibian": "Reptil eller amfibier",
+		"Category": "Kategori",
+		"Living": "Levande",
+		"SkeletonOrBones": "Skelett eller ben",
+		"Bug": "Insekt",
+		"Mammal": "Däggdjur",
+		"All": "Alla"
+	},
+	"Structure": {
+		"Structure": "Struktur",
+		"House": "Hus",
+		"Building": "Byggnad",
+		"Other": "Annat",
+		"All": "Alla"
 	},
 	"Vegetation": {
 		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
+		"Flowers": "Blommor",
+		"Plants": "Växter",
+		"PhotoType": "Bild typ",
+		"Closeup": "Närbild",
 		"Full": "Full",
-		"All": "All"
+		"All": "Alla"
 	},
-  "Filters": {
-    "All": "Alla",	
-    "Type": "Type",
-    "Gender": "Kön",
-    "Male": "Man",
-    "Female": "Kvinna",
-    "View": "Vy",
-    "Front": "Framifrån",
-    "Side": "Profil",
-    "Back": "Bakifrån",
-    "AboveOrBelow": "Ovanför eller nedanför",
-    "ClassMode": "Klassläge",
-    "Class": "Klass",
-    "Minutes": "minuter",
-    "Seconds": "sekunder",
-    "Hour": "timme",
-    "Hours": "timmar",
-    "NoTimers": "Inga timers",
-    "OnlyMostRecentImages": "Använd endast nyare bilder",
-    "NumberOfImages": "Antal bilder",
-    "Start": "Starta", 
-    "Time": "Tid",
+	"Filters": {
+		"All": "Alla",
+		"Type": "Typ",
+		"Gender": "Kön",
+		"Male": "Man",
+		"Female": "Kvinna",
+		"View": "Vy",
+		"Front": "Framifrån",
+		"Side": "Profil",
+		"Back": "Bakifrån",
+		"AboveOrBelow": "Ovanför eller nedanför",
+		"ClassMode": "Klassläge",
+		"Class": "Klass",
+		"Minutes": "minuter",
+		"Seconds": "sekunder",
+		"Hour": "timme",
+		"Hours": "timmar",
+		"NoTimers": "Inga timers",
+		"OnlyMostRecentImages": "Använd endast nyare bilder",
+		"NumberOfImages": "Antal bilder",
+		"Start": "Starta",
+		"Time": "Tid",
 		"Break": "Break",
 		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
-  },
-  "Header": {
-    "Title": "r/SketchDaily Referenser",
-    "AddImages": "Lägg till bilder",
-    "News": "Nyheter",
-    "Logs": "Loggar",
-    "LogIn": "Logga in",
-    "LogOut": "Logga ut",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
-  },
-  "News": {
-    "WhatsNew": "Det Senaste",
-    "Announcement": "Meddelande"
-  },
-  "ImageViewer": {
-    "Timer": "Timer",
-    "Paused": "Pausad",
-    "ImageInfo": "Bildinformation",
-    "Source": "Källa",
-    "Model": "Modell",
-    "Photographer": "Fotograf",
-    "DateAdded": "Tilläggningsdatum",
-    "TermsOfUse": "Villkor för användning",
-    "Classifications": "klassificeringar",
-    "About": "Om",
-    "LeftControls": "Left - Föregående bild",
-    "RightControls": "Right - Nästa bild",
-    "SpacebarControls": "Spacebar - Paus",
-    "EscapeControls": "Escape - Sluta",
-    "VisitUsOnReddit": "Besök oss på Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
+		"true": "Sant",
+		"false": "Falskt"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Referenser",
+		"AddImages": "Lägg till bilder",
+		"News": "Nyheter",
+		"Logs": "Loggar",
+		"LogIn": "Logga in",
+		"LogOut": "Logga ut",
+		"YourImages": "Dina bilder",
+		"ManageImages": "Hantera bilder"
+	},
+	"News": {
+		"WhatsNew": "Det Senaste",
+		"Announcement": "Meddelande"
+	},
+	"ImageViewer": {
+		"Timer": "Timer",
+		"Paused": "Pausad",
+		"ImageInfo": "Bildinformation",
+		"Source": "Källa",
+		"Model": "Modell",
+		"Photographer": "Fotograf",
+		"DateAdded": "Tilläggningsdatum",
+		"TermsOfUse": "Villkor för användning",
+		"Classifications": "klassificeringar",
+		"About": "Om",
+		"LeftControls": "Vänster - Föregående bild",
+		"RightControls": "Höger - Nästa bild",
+		"SpacebarControls": "Mellanslag - Paus",
+		"EscapeControls": "Escape - Sluta",
+		"VisitUsOnReddit": "Besök oss på Reddit!",
+		"Next": "Nästa",
+		"TakeABreak": "Ta en paus!",
 		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
 		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
+		"Close": "Stäng",
+		"ClassComplete": "Klass färdig",
+		"NiceWork": "Bra jobbat, du gjorde klart klassen!",
 		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+	},
 	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
+		"seconds": "{{total}} sekunder",
+		"minutes": "{{total}} minuter",
 		"Class mode": "Class mode",
-		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"No timers": "Inga timers",
+		"30 minutes": "30 minuter",
+		"1 hour": "1 timme",
+		"2 hours": "2 timmar",
+		"3 hours": "3 timmar",
+		"6 hours": "6 timmar"
 	}
 }
