--- a/UI/skd-ref-site/src/assets/i18n/pt.json
+++ b/UI/skd-ref-site/src/assets/i18n/pt.json
@@ -104,15 +104,15 @@
 		"TermsOfUse": "Termos de Uso",
 		"Classifications": "Classificações",
 		"About": "Sobre",
-		"LeftControls": "Left - Imagem anterior",
-		"RightControls": "Right - Próxima imagem",
-		"SpacebarControls": "Spacebar - Pausa",
+		"LeftControls": "Esquerda - Imagem anterior",
+		"RightControls": "Direita - Próxima imagem",
+		"SpacebarControls": "Barra de Espaço - Pausa",
 		"EscapeControls": "Escape - Pare",
 		"VisitUsOnReddit": "Visite-nos no Reddit!",
 		"Next": "Próximo",
 		"TakeABreak": "Dê uma pausa!",
 		"ItsTimeForABreak": "Hora da pausa. Sua aula retornará quando o temporizador chegar a 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
+		"NoMoreImages": "Sem imagens com base no seu filtro. Desculpe!",
 		"Close": "Fechar",
 		"ClassComplete": "Aula concluída",
 		"NiceWork": "Bom trabalho, você terminou a aula!",
