--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -6,20 +6,20 @@
 		"JoinTheFun": "Присоединяйтесь!"
 	},
 	"FullBody": {
-		"FullBody": "Целое Тело",
+		"FullBody": "Фигура",
 		"All": "Все",
 		"Clothing": "Одежда",
 		"Clothed": "Одетые",
 		"Nude": "Обнаженные",
 		"IncludeNSFWImages": "Включить фотографии для взрослых",
 		"Pose": "Поза",
-		"Action": "В действии",
-		"Stationary": "Неподвижные"
+		"Action": "В движении",
+		"Stationary": "Статичные"
 	},
 	"BodyPart": {
 		"BodyPart": "Часть тела",
 		"Hand": "Руки",
-		"Foot": "Feet",
+		"Foot": "Ступни",
 		"Head": "Головы",
 		"All": "Все"
 	},
@@ -112,7 +112,7 @@
 		"Next": "Далее",
 		"TakeABreak": "Перерыв",
 		"ItsTimeForABreak": "Идет перерыв. Занятия продолжатся, когда таймер достигнет 0.",
-		"NoMoreImages": "Больше нет изображений по вашему запросу. Что поделать!",
+		"NoMoreImages": "Больше нет изображений по вашему запросу. Нам очень жаль!",
 		"Close": "Закрыть",
 		"ClassComplete": "Занятие окончено",
 		"NiceWork": "Поздравляю, вы окончили занятие!",
