--- a/UI/skd-ref-site/src/assets/i18n/it.json
+++ b/UI/skd-ref-site/src/assets/i18n/it.json
@@ -6,7 +6,7 @@
 		"JoinTheFun": "Unisciti al divertimento!"
 	},
 	"FullBody": {
-		"FullBody": "Full body",
+		"FullBody": "Corpo completo",
 		"Clothing": "Vestiti",
 		"Clothed": "Con vestiti",
 		"Nude": "Foto di nudo",
@@ -94,7 +94,7 @@
 		"Announcement": "Annuncio"
 	},
 	"ImageViewer": {
-		"Timer": "Timer",
+		"Timer": "Tempo",
 		"Paused": "In pausa",
 		"ImageInfo": "Info immagine",
 		"Source": "Fonte",
