--- a/UI/skd-ref-site/src/assets/i18n/tr.json
+++ b/UI/skd-ref-site/src/assets/i18n/tr.json
@@ -1,132 +1,132 @@
 {
-    "Welcome": {
-        "Hello": "Merhaba!",
-        "Welcome": "SketchDaily referans doohickisine hoşgeldiniz.",
-        "LookingForSomethingElseToDraw": "Çizmek için birşey mi arıyorsunuz?",
-        "JoinTheFun": "Eğlenceye katılın!"
-    },
-    "FullBody": {
-        "FullBody": "Tüm vücut",
-        "Clothing": "Kıyafet",
-        "Clothed": "Giyimli",
-        "Nude": "Çıplak",
-        "IncludeNSFWImages": "Görünmesi ",
-        "Pose": "Poz",
-        "Action": "Aksiyon",
-        "All": "Hepsi",
-        "Stationary": "stationary"
-    },
-    "BodyPart": {
-        "BodyPart": "Vücudun parçası",
-        "Hand": "Eller",
-        "Foot": "Ayak",
-        "Head": "Kafalar",
-        "All": "Hepsi"
-    },
-    "Animal": {
-        "Animal": "Hayvanlar",
-        "Bird": "Kuş",
-        "Fish": "Balık",
-        "ReptileOrAmphibian": "Reptile or Amphibian",
-        "Category": "Kategori",
-        "Living": "Canlı",
-        "SkeletonOrBones": "İskelet veya kemik",
-        "Bug": "Böcek",
-        "Mammal": "Memmeli hayvanlar",
-        "All": "Hepsi",
-        "Species": "Hayvan türleri"
-    },
-    "Structure": {
-        "House": "Ev",
-        "Building": "Bina",
-        "Other": "Diğer",
-        "All": "Hepsi",
-        "Structure": "Structure"
-    },
-    "Vegetation": {
-        "Vegetation": "Vegetation",
-        "Flowers": "Çiçek",
-        "Plants": "Bitkiler",
-        "PhotoType": "Fotoğraf türü",
-        "Closeup": "Yakından",
-        "Full": "Tüm",
-        "All": "Hepsi"
-    },
-    "Filters": {
-        "All": "Hepsi",
-        "Type": "Tür",
-        "Gender": "Cinsiyet",
-        "Male": "Adam",
-        "Female": "Kadın",
-        "View": "Görüntü Yönleri",
-        "Front": "Önden",
-        "Side": "Yandan",
-        "Back": "Arkadan",
-        "AboveOrBelow": "Üsten veya Alttan",
-        "ClassMode": "Sınıf Modu",
-        "Class": "Sınıf",
-        "Minutes": "dakika",
-        "Seconds": "saniye",
-        "Hour": "saat",
-        "Hours": "saat",
-        "NoTimers": "zamansız",
-        "OnlyMostRecentImages": "En yeni resimlseri kullan",
-        "NumberOfImages": "Resim sayısı",
-        "Start": "Başla",
-        "Time": "Zaman",
-        "Break": "Ara",
-        "NSFW": "Görünmesi ",
-        "true": "Doğru",
-        "false": "Yanlış"
-    },
-    "Header": {
-        "Title": "r/SketchDaily Referanslar",
-        "AddImages": "Fotoğraf ekle",
-        "ManageImages": "Fotoğrafları ayarla",
-        "YourImages": "Benim fotoğraflarım",
-        "News": "Haberler",
-        "Logs": "Logs",
-        "LogIn": "Log in",
-        "LogOut": "Log out"
-    },
-    "News": {
-        "WhatsNew": "Yeni haberler",
-        "Announcement": "Haber"
-    },
-    "ImageViewer": {
-        "Paused": "Durduruldu",
-        "ImageInfo": "Fotoğraf hakkında bilgi",
-        "Model": "Model",
-        "Photographer": "Fotoğrafcı",
-        "DateAdded": "Eklenen tarih",
-        "TermsOfUse": "Kulanım Anlaşması",
-        "About": "Hakkında",
-        "LeftControls": "Sol - Bir önceki fotoğraf",
-        "RightControls": "Sağ - Bir sonraki fotoğraf",
-        "EscapeControls": "Esc - Dur",
-        "VisitUsOnReddit": "Reddit'de bize ziyaret edin!",
-        "Next": "Bir sonraki",
-        "TakeABreak": "Ara ver!",
-        "ItsTimeForABreak": "Ara zamanı. Zaman 0'a gelince ders devam edecektir.",
-        "NoMoreImages": "Filtrenize göre resim bulunamadı. Özür dileriz!",
-        "Close": "Yakın",
-        "ClassComplete": "Ders bitti",
-        "NiceWork": "Aferim, dersi bitirdim!",
-        "Timer": "Zamanlama",
-        "Source": "Source",
-        "Classifications": "Classifications",
-        "SpacebarControls": "Spacebar - Pause",
-        "MaybeTakeABreak": "Maybe take a little break and acheck out...."
-    },
-    "Timers": {
-        "Class mode": "Ders modu",
-        "No timers": "Zamanlama yok",
-        "30 minutes": "30 dakika",
-        "1 hour": "1 saat",
-        "2 hours": "2 saat",
-        "3 hours": "3 saat",
-        "6 hours": "6 saat",
-        "seconds": "{{ total}} saniye",
-        "minutes": "{{total}} dakika"
-    }
+	"Welcome": {
+		"Hello": "Merhaba!",
+		"Welcome": "SketchDaily referans doohickisine hoşgeldiniz.",
+		"LookingForSomethingElseToDraw": "Çizmek için birşey mi arıyorsunuz?",
+		"JoinTheFun": "Eğlenceye katılın!"
+	},
+	"FullBody": {
+		"FullBody": "Tüm vücut",
+		"Clothing": "Kıyafet",
+		"Clothed": "Giyimli",
+		"Nude": "Çıplak",
+		"IncludeNSFWImages": "Görünmesi ",
+		"Pose": "Poz",
+		"Action": "Aksiyon",
+		"All": "Hepsi",
+		"Stationary": "Hareketsiz"
+	},
+	"BodyPart": {
+		"BodyPart": "Vücudun parçası",
+		"Hand": "Eller",
+		"Foot": "Ayak",
+		"Head": "Kafalar",
+		"All": "Hepsi"
+	},
+	"Animal": {
+		"Animal": "Hayvanlar",
+		"Bird": "Kuş",
+		"Fish": "Balık",
+		"ReptileOrAmphibian": "Sürüngenler ve Amfibiler",
+		"Category": "Kategori",
+		"Living": "Canlı",
+		"SkeletonOrBones": "İskelet veya kemik",
+		"Bug": "Böcek",
+		"Mammal": "Memmeli hayvanlar",
+		"All": "Hepsi",
+		"Species": "Hayvan türleri"
+	},
+	"Structure": {
+		"House": "Ev",
+		"Building": "Bina",
+		"Other": "Diğer",
+		"All": "Hepsi",
+		"Structure": "Yapı"
+	},
+	"Vegetation": {
+		"Vegetation": "Bitki Örtüsü",
+		"Flowers": "Çiçekler",
+		"Plants": "Bitkiler",
+		"PhotoType": "Fotoğraf türü",
+		"Closeup": "Yakından",
+		"Full": "Tüm",
+		"All": "Hepsi"
+	},
+	"Filters": {
+		"All": "Hepsi",
+		"Type": "Tür",
+		"Gender": "Cinsiyet",
+		"Male": "Adam",
+		"Female": "Kadın",
+		"View": "Görüntü Yönleri",
+		"Front": "Önden",
+		"Side": "Yandan",
+		"Back": "Arkadan",
+		"AboveOrBelow": "Üsten veya Alttan",
+		"ClassMode": "Sınıf Modu",
+		"Class": "Sınıf",
+		"Minutes": "dakika",
+		"Seconds": "saniye",
+		"Hour": "saat",
+		"Hours": "saat",
+		"NoTimers": "zamansız",
+		"OnlyMostRecentImages": "En yeni resimlseri kullan",
+		"NumberOfImages": "Resim sayısı",
+		"Start": "Başla",
+		"Time": "Zaman",
+		"Break": "Ara",
+		"NSFW": "Görünmesi ",
+		"true": "Doğru",
+		"false": "Yanlış"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Referanslar",
+		"AddImages": "Fotoğraf ekle",
+		"ManageImages": "Fotoğrafları ayarla",
+		"YourImages": "Benim fotoğraflarım",
+		"News": "Haberler",
+		"Logs": "Oturumlar",
+		"LogIn": "Oturum aç",
+		"LogOut": "Çıkış yap"
+	},
+	"News": {
+		"WhatsNew": "Yeni haberler",
+		"Announcement": "Haber"
+	},
+	"ImageViewer": {
+		"Paused": "Durduruldu",
+		"ImageInfo": "Fotoğraf hakkında bilgi",
+		"Model": "Model",
+		"Photographer": "Fotoğrafcı",
+		"DateAdded": "Eklenen tarih",
+		"TermsOfUse": "Kulanım Anlaşması",
+		"About": "Hakkında",
+		"LeftControls": "Sol - Bir önceki fotoğraf",
+		"RightControls": "Sağ - Bir sonraki fotoğraf",
+		"EscapeControls": "Esc - Dur",
+		"VisitUsOnReddit": "Reddit'de bize ziyaret edin!",
+		"Next": "Bir sonraki",
+		"TakeABreak": "Ara ver!",
+		"ItsTimeForABreak": "Ara zamanı. Zaman 0'a gelince ders devam edecektir.",
+		"NoMoreImages": "Filtrenize göre resim bulunamadı. Özür dileriz!",
+		"Close": "Yakın",
+		"ClassComplete": "Ders bitti",
+		"NiceWork": "Aferin, dersi bitirdin!",
+		"Timer": "Zamanlama",
+		"Source": "Kaynak",
+		"Classifications": "Sınıflandırma",
+		"SpacebarControls": "Spacebar - Pause",
+		"MaybeTakeABreak": "Maybe take a little break and acheck out...."
+	},
+	"Timers": {
+		"Class mode": "Ders modu",
+		"No timers": "Zamanlama yok",
+		"30 minutes": "30 dakika",
+		"1 hour": "1 saat",
+		"2 hours": "2 saat",
+		"3 hours": "3 saat",
+		"6 hours": "6 saat",
+		"seconds": "{{ total}} saniye",
+		"minutes": "{{total}} dakika"
+	}
 }
