--- a/UI/skd-ref-site/src/assets/i18n/hu.json
+++ b/UI/skd-ref-site/src/assets/i18n/hu.json
@@ -100,7 +100,7 @@
 		"Source": "Forrás",
 		"Model": "Model",
 		"Photographer": "Fényképész",
-		"DateAdded": "Dátum",
+		"DateAdded": "Hozzáadás Dátuma",
 		"TermsOfUse": "Felhasználási feltételek",
 		"Classifications": "Besorolás",
 		"About": "Rólunk",
@@ -122,7 +122,7 @@
 		"seconds": "{{total}} másodperc",
 		"minutes": "{{total}} perc",
 		"Class mode": "Óra mód",
-		"No timers": "Visszaszámlálás nélkül",
+		"No timers": "Időzítés nélkül",
 		"30 minutes": "30 perc",
 		"1 hour": "1 óra",
 		"2 hours": "2 óra",
